--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,101 @@
-<h1>{{ msg }}</h1>
+<html>
+    <head> 
+        <title>Python Registration</title>
+        <!-- For Responsive -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- FavIcon -->
+        <link href="/static/images/favicon.ico" rel="icon" type="image/x-icon" />
+        <!-- Main CSS -->
+        <link rel="stylesheet" href="../static/css/styles.css">
+        <!-- Font Awesome CSS -->
+        <link rel="stylesheet" href="../static/css/font-awesome-4.7.0/css/font-awesome.min.css">
+        <!-- JQuery CDN -->
+        <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+            integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <!-- Resgistration Form -->
+        <form method="post" action="{{ url_for('python_registration') }}">
+
+            <div class="segment">
+                <h1>Python Registration</h1>
+            </div>
+
+            <label>
+                <input type="text" placeholder="Name" name="name" value="{{ name }}" required/>
+            </label>
+            <label>
+                <input type="text" placeholder="Email" name="email" value="{{ email }}" required />
+            </label>
+            <label>
+                <div>
+                    <input id="password-field" type="password" placeholder="Password" name="password"
+                        value="{{ password }}" required />
+                    <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
+                </div>
+            </label>
+
+            <!-- Register Button -->
+            <button class="red" type="submit" onclick="{{ url_for('python_registration') }}">
+                <i class="icon fa fa-lock"></i>
+                Register
+            </button>
+            
+             <!-- Error message -->
+             {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                <div class="h6" style="color: #2f2187; opacity: 3; text-align: center; padding-top: 1rem;">
+                    <em>{{ messages[0] }}</em>
+                </div>
+                {% endif %}
+             {% endwith %}
+
+            <!-- Important Links -->
+
+            <div class="segment">
+                <button class="unit" type="button">
+                    <a href="https://raj-cv.herokuapp.com" target="_blank">
+                        <i class="icon fa fa-user-circle-o"></i>
+                    </a>    
+                </button>
+                <button class="unit" type="button">
+                    <a href="{{ url_for('onDev', link='Query') }}" target="_blank">
+                        <i class="icon fa fa-question"></i>
+                    </a>
+                </button>
+                <button class="unit" type="button">
+                    <a href="https://github.com/Raj-kar" target="_blank">
+                        <i class="icon fa fa-github"></i>
+                    </a>
+                </button>
+            </div>
+        
+        </form>
+
+        <!-- Login Form -->
+        <form method="post" action="{{ url_for('login') }}">
+            <div class="segment-bottom">
+                <h2>Log In</h2>
+            </div>
+            
+            <div class="input-group">   
+                <label>
+                    <input type="text" placeholder="Email Address" name="email" value="{{ email }}" required/>
+                </label>
+                <button class="unit" type="submit" onclick="{{ url_for('login') }}">
+                    <i class="icon fa fa-arrow-right"></i>
+                </button>
+            </div>
+            
+        </form>
+
+        <!-- SCRIPT FOR TEST BUTTONS -->
+        <script>
+            function testButton() {
+                alert("Btn clicked ");
+            }
+        </script>
+        <!-- Script for  Show and Hide password-->
+        <script src="/static/js/password.js"></script>
+    </body>
+</html>
