--- a/templates/header.html
+++ b/templates/header.html
@@ -42,7 +42,7 @@
                     </li>
                     <li class="nav-item">
                         {% if current_user.id == 1: %}
-                        <a class="nav-link" href="{{ url_for('create_assignment') }}">Admin</a>
+                        <a class="nav-link" href="#">Admin</a>
                         {% else %}
                         <a class="nav-link" href="{{ url_for('onDev', link='About') }}">About</a>
                         {% endif %}
