--- a/templates/err.html
+++ b/templates/err.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- For Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>{{ route }} lost on space</title>
     <style>
         body {
@@ -13,7 +14,13 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width: 700px; height: 700px
+            width: 700px; height: 700px;
+        }
+        @media only screen and (max-width: 600px) {
+            .center {
+                margin-top: 40%;
+                width: 350px; height: 350px;
+            }
         }
     </style>
 </head>
