--- a/templates/index-post.html
+++ b/templates/index-post.html
@@ -13,6 +13,11 @@
         <p>{{ post.body|safe }}</p>
     
         <hr>
+        {% if current_user.id == 1 %}
+          <a href="{{ url_for('edit_assignment', post_id=post.id) }}" class="btn btn-info">
+            Edit Assignment</a>
+        {% endif %}
+
 
         <!-- Comments Form -->
         <!-- <div class="card my-4">
