--- a/templates/create-ass.html
+++ b/templates/create-ass.html
@@ -35,14 +35,14 @@
         <div class="form-row">
             <div class="form-group col-md-12">
                 <label for="inputEmail4">Content</label>
-                    <textarea name="body">
+                    <textarea name="body" style="height: 51.25rem;">
                         {{ assignment.body }}
                     </textarea>
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-12">
-                <button type="submit" class="btn btn-primary">ADD Assignment</button>
+                <button type="submit" class="btn btn-primary">{{type}}  Assignment</button>
             </div>
         </div>
         
