--- a/templates/create-ass.html
+++ b/templates/create-ass.html
@@ -44,10 +44,17 @@
             <div class="form-group col-md-12">
                 <button type="submit" class="btn btn-primary">{{type}}  Assignment</button>
             </div>
-        </div>
-        
-        
+        </div>        
     </form>
+
+   <div class="card">
+       <div class="card-body">
+           <ul>
+               <a href="{{ url_for('show_post_table') }}">Assignment Table</a><br><br>
+               <a href="{{ url_for('show_student_table') }}">User Table</a>
+           </ul>
+       </div>
+   </div>
 
     <script>
         tinymce.init({
