--- a/templates/test.html
+++ b/templates/test.html
@@ -6,20 +6,34 @@
         <table border="1">
             <tr>
                 <th>Id</th>
-                <th>author</th>
-                <th>title</th>
-                <th>subtitle</th>
-                <th>date</th>
+                {% if type == "posts" %}
+                    <th>author</th>
+                    <th>title</th>
+                    <th>subtitle</th>
+                    <th>date</th>
+                {% else %}
+                    <th>name</th>
+                    <th>email</th>
+                    <th>date of join</th>
+                {% endif %}
             </tr>
+
             {% for post in posts %}
             <tr>
                 <td>{{ post.id }}</td>
-                <td>{{ post.author }}</td>
-                <td>{{ post.title }}</td>
-                <td>{{ post.subtitle }}</td>
-                <td>{{ post.date }}</td>
+                {% if type == "posts" %}
+                    <td>{{ post.author }}</td>
+                    <td>{{ post.title }}</td>
+                    <td>{{ post.subtitle }}</td>
+                    <td>{{ post.date }}</td>
+                {% else %}
+                    <td>{{ post.name }}</td>
+                    <td>{{ post.email }}</td>
+                    <td>{{ post.date_of_join }}</td>
+                {% endif %}
             </tr>
             {% endfor %}
+            
         </table>
     </body>
 </html>
