--- a/templates/header.html
+++ b/templates/header.html
@@ -12,6 +12,9 @@
 
     <title>Welcome {{ current_user.name.split(" ")[0] }}</title>
 
+    <!-- Favicon Icons -->
+    <link rel="stylesheet" href="/static/css/font-awesome-4.7.0/css/font-awesome.min.css">
+
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
