--- a/templates/create-ass.html
+++ b/templates/create-ass.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Crate Assignment</title>
+
+    <!-- JQuery CDN -->
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+
+    <!-- Favicon Icons -->
+    <link rel="stylesheet" href="/static/css/font-awesome-4.7.0/css/font-awesome.min.css">
 
     <!-- include libraries(jQuery, bootstrap) -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
@@ -16,45 +24,73 @@
         body {
             margin: 2rem;
         }
+
+        a,
+        a:hover {
+            color: #333
+        }
     </style>
 </head>
+
 <body>
     <form style="width: 720px;" method="POST">
         <div class="form-row">
             <div class="form-group col-md-6">
+                {% if type != "Add User" %}
                 <label>Assignment Title</label>
                 <input type="text" class="form-control" placeholder="Title" name="title" value="{{ assignment.title }}"
                     required>
+                {% else %}
+                <label>User Name</label>
+                <input type="text" class="form-control" placeholder="Name" name="name" required>
+                {% endif %}
             </div>
             <div class="form-group col-md-6">
+                {% if type != "Add User" %}
                 <label>Assignment Subtitle</label>
-                <input type="text" class="form-control" placeholder="Subtitle" name="subtitle" value="{{ assignment.subtitle }}"
-                    required>
+                <input type="text" class="form-control" placeholder="Subtitle" name="subtitle"
+                    value="{{ assignment.subtitle }}" required>
+                {% else %}
+                <label>User Email</label>
+                <input type="email" class="form-control" placeholder="Email" name="email" required>
+                {% endif %}
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-12">
+                {% if type != "Add User" %}
                 <label for="inputEmail4">Content</label>
-                    <textarea name="body" style="height: 51.25rem;">
+                <textarea name="body" style="height: 51.25rem;">
                         {{ assignment.body }}
                     </textarea>
+                {% else %}
+                <label>Password</label>
+                <div class="input-group" id="show_hide_password">
+                    <input class="form-control" type="password" name="password">
+                    <div class="input-group-addon">
+                        <a href=""><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+                {% endif %}
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-12">
-                <button type="submit" class="btn btn-primary">{{type}}  Assignment</button>
+                <button type="submit" class="btn btn-primary">{{type}}</button>
             </div>
-        </div>        
+        </div>
     </form>
 
-   <div class="card">
-       <div class="card-body">
-           <ul>
-               <a href="{{ url_for('show_post_table') }}">Assignment Table</a><br><br>
-               <a href="{{ url_for('show_student_table') }}">User Table</a>
-           </ul>
-       </div>
-   </div>
+    <div class="card">
+        <div class="card-body">
+            <ul>
+                <a href="{{ url_for('home') }}">HOME</a><br><br>
+                <a href="{{ url_for('show_post_table') }}">Manage Posts</a><br><br>
+                <a href="{{ url_for('show_student_table') }}">Manage User</a><br><br>
+                <a href="{{ url_for('add_user') }}">Add User</a>
+            </ul>
+        </div>
+    </div>
 
     <script>
         tinymce.init({
@@ -62,6 +98,22 @@
             plugins: 'codesample advlist link image lists',
             toolbar: 'undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | outdentindent| codesample',
         });
+
+        $(document).ready(function () {
+            $("#show_hide_password a").on('click', function (event) {
+                event.preventDefault();
+                if ($('#show_hide_password input').attr("type") == "text") {
+                    $('#show_hide_password input').attr('type', 'password');
+                    $('#show_hide_password i').addClass("fa-eye-slash");
+                    $('#show_hide_password i').removeClass("fa-eye");
+                } else if ($('#show_hide_password input').attr("type") == "password") {
+                    $('#show_hide_password input').attr('type', 'text');
+                    $('#show_hide_password i').removeClass("fa-eye-slash");
+                    $('#show_hide_password i').addClass("fa-eye");
+                }
+            });
+        });
     </script>
 </body>
+
 </html>
