--- a/templates/index-home.html
+++ b/templates/index-home.html
@@ -17,8 +17,8 @@
                 </div>
                 {% if current_user.id == 1 %}
                   <div class="col-lg-6">
-                    <a href="{{ url_for('delete_assignment', post_id=post.id) }}" class="btn btn-danger">Delete
-                      Assignment</a>
+                    <a href="{{ url_for('delete_assignment', post_id=post.id) }}" class="btn btn-danger">
+                      <i class="fa fa-trash" aria-hidden="true"></i></a>
                   </div>
                 {% endif %}
               </div>
