--- a/templates/index.html
+++ b/templates/index.html
@@ -59,13 +59,13 @@
                     </a>    
                 </button>
                 <button class="unit" type="button">
-                    <a href="{{ url_for('onDev', link='Google login') }}" target="_blank">
+                    <a href="{{ url_for('google_login') }}" target="_blank">
                         <i style="color: #49B164;" class="icon fa fa-google"></i>
                     </a>
                 </button>
                 <button class="unit" type="button" >
-                    <a href="{{ url_for('onDev', link='Twitter login') }}" target="_blank">
-                        <i style="color: #1DA1F2;" class="icon fa fa-twitter"></i>
+                    <a href="{{ url_for('onDev', link='fb login') }}" target="_blank">
+                        <i style="color: #4867AA;" class="icon fa fa-facebook"></i>
                     </a>
                 </button>
             </div>
