fix internal server error

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
                     </a>    
                 </button>
                 <button class="unit" type="button">
-                    <a href="{{ url_for('google_login') }}" target="_blank">
+                    <a href="#" target="_blank">
                         <i style="color: #49B164;" class="icon fa fa-google"></i>
                     </a>
                 </button>
