add autologin feature

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
             </label>
 
             <!-- Register Button -->
-            <button class="red" type="submit" onclick="{{ url_for('python_registration') }}">
+            <button class="red" type="submit" onclick="{{ url_for('index') }}">
                 <i class="icon fa fa-lock"></i>
                 Register
             </button>
