--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
         <!-- link tag -->
         {% block link %} <a href=""></a> {% endblock %}
 
-        <!-- Error message -->
+        <!--  message -->
         {% with messages = get_flashed_messages() %}
         {% if messages %}
         <div class="h6" style="color: #49B164; font-weight: 700; opacity: 3; text-align: center; padding-top: 1rem;">
