--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,17 @@
                         </div>
                         <!--//cta-holder-->
 
+                        <!--  message -->
+                        {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                        <div class="h6"
+                            style="color: #5CB377; font-weight: 700; opacity: 3; text-align: center; padding-top:
+                            1rem;">
+                            <em>{{ messages[0] }}</em>
+                        </div>
+                        {% endif %}
+                        {% endwith %}
+
                         <div class="hero-quotes mt-5">
                             <div id="quotes-carousel" class="quotes-carousel carousel slide carousel-fade mb-5"
                                 data-ride="carousel" data-interval="8000">
