--- a/templates/login.html
+++ b/templates/login.html
@@ -25,6 +25,6 @@
 
 {% block link %}
 <div style="text-align:center">
-    <a style="font-weight: bold;" href="{{ url_for('register') }}">Register for a new account</a>
+    <a id="link" style="font-weight: bold;" href="{{ url_for('register') }}">Register for a new account</a>
 </div>
 {% endblock %}
