- PWA BUG FIXEX 1. auto redirect when app installed fix. 2. hide install button if user alreay installed.

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
                             <a class="btn btn-secondary" href="{{ url_for('login') }}">Login</a>
                             <!-- Install Button -->
                             <a style="background-color:#5cb377;" hidden id="installButton" class="btn btn-primary"
-                                href="{{ url_for('login') }}">Install as an
+                                href="#">Install as an
                                 App</a>
                         </div>
                         <!--//cta-holder-->
