- Authentication feature added 1. Reset your password added. - now users can change their password if forgot.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -145,3 +145,11 @@ button.red {
     margin: auto;
     color: #2f2187;
 }
+
+#resetButton {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    color: #ae1100;
+    display: none;
+}
