--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bootstrap 4 Book/eBook Landing Page Template For Developers">
-    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
+    <meta name="description" content="Student Register Portal, for Developers">
+    <meta name="author" content="Raj Kar">
     <link rel="shortcut icon" href="/static/images/favicon.ico">
 
     <!-- manifest -->
@@ -29,7 +29,7 @@
         <div class="branding">
             <div class="container-fluid position-relative py-3">
                 <div class="logo-wrapper">
-                    <div class="site-logo"><a class="navbar-brand" href="index.html"><img class="logo-icon mr-2"
+                    <div class="site-logo"><a class="navbar-brand" href="#"><img class="logo-icon mr-2"
                                 src="/static/images/index-icon.svg" alt="logo"><span class="logo-text">PyRaj</span></a>
                     </div>
                 </div>
