--- a/templates/footer.html
+++ b/templates/footer.html
@@ -19,6 +19,10 @@
 
 <!-- Prism JS -->
 <script src="/static/prism/prism.js"></script>
+
+<!-- Script for loading screen -->
+<script type="text/javascript" src="{{ url_for('static', filename='js/page_animation.js') }}"></script>
+
 </body>
 
 </html>
