--- a/static/css/blog-home.css
+++ b/static/css/blog-home.css
@@ -6,3 +6,34 @@
 body {
   padding-top: 56px;
 }
+
+.loader {
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+}
+
+.loader>img {
+  margin: auto;
+  width: 30rem;
+  height: 30rem;
+}
+
+.loader.hidden {
+  animation: fadeOut 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
