--- a/templates/header.html
+++ b/templates/header.html
@@ -23,10 +23,13 @@
 
     <!-- Prism CSS -->
     <link rel="stylesheet" href="/static/prism/prism.css">
-
 </head>
 
 <body>
+     <!-- loading screen -->
+     <div class="loader">
+         <img src="/static/icons/home_animation.gif" alt="loading....">
+     </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
