- Page rendering Optimization 1. update templete for quick rendering. 2. dynamic page rendering using flask. 3. delete unnecessary components. 4. Easy to use UI. .. other minor bugs.

--- a/templates/post.html
+++ b/templates/post.html
@@ -1,61 +1,21 @@
-{% include"header.html" %}
+{% extends 'blog-base.html' %}
+{% block title %} {{ post.title }} {% endblock %}
+{% block heading %} {{ post.title }} {% endblock %}
+{% block details %} 
+  <hr> <p>Posted on {{ post.date }} by {{ post.author }}</p> <hr>
+{% endblock %}
 
-        <hr>
+{% block main_content %}
+  <p>{{ post.body|safe }}</p>
+{% endblock %}
 
-        <!-- Date/Time -->
-        <p>Posted on {{ post.date }} by {{ post.author }}</p>
-        
-        <hr>
-        <!-- Preview Image -->
-        <!-- <img class="img-fluid rounded" src="http://placehold.it/900x300" alt=""> -->
-       
-        <!-- Post Content -->
-        <p>{{ post.body|safe }}</p>
-    
-        <hr>
-        {% if current_user.id == 1 %}
-          <a href="{{ url_for('edit_assignment', post_id=post.id) }}" class="btn btn-info">
-            Edit Assignment</a>
-        {% endif %}
+{% block pagination %}
+{% endblock %}
 
+<hr>
 
-        <!-- Comments Form -->
-        <!-- <div class="card my-4">
-          <h5 class="card-header">Leave a Comment:</h5>
-          <div class="card-body">
-            <form>
-              <div class="form-group">
-                <textarea class="form-control" rows="3"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-          </div>
-        </div> -->
-
-        <!-- Single Comment -->
-        <!-- <div class="media mb-4">
-          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-          <div class="media-body">
-            <h5 class="mt-0">Commenter Name</h5>
-            Lorem ipsum doloret rerum sit dolor nam sed, veniam officiis vel quis perferendis ea consectetur repellat!
-          </div>
-        </div> -->
-      
-        <br><hr><br>
-      </div>
-
-      <!-- Sidebar Widgets Column -->
-      <div class="col-md-4">
-
-        {% include "search_bar.html" %}
-        {% include "categories.html" %}
-        {% include "side_bar.html" %}
-
-      </div>
-
-    </div>
-    <!-- /.row -->
-
-  </div>
-  <!-- /.container -->
-  {% include "footer.html" %}
+{% block edit %}
+  {% if current_user.id == 1 %}
+    <a href="{{ url_for('edit_assignment', post_id=post.id) }}" class="btn btn-info">Edit Assignment</a>
+  {% endif %}
+{% endblock %}
