--- a/templates/home.html
+++ b/templates/home.html
@@ -1,58 +1,40 @@
-{% include "header.html" %}
+{% extends 'blog-base.html' %}
+{% block title %} Weclome {{ current_user.name.split(" ")[0] }} {% endblock %}
+{% block heading %} Assignments {% endblock %}
 
-        {% for post in posts %}
-          <!-- Blog Post -->
-          <div class="card mb-4">
-            <!-- <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap"> -->
-            <div class="card-body">
-              <h2 class="card-title">{{ post.title }}</h2>
-              <p class="card-text">{{ post.subtitle }}</p>
-              <a href="{{ url_for('post', post_id=post.id) }}" class="btn btn-primary">Show Assignment &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-              <div class="row">
-                <div class="col-lg-6">
-                  Posted on {{ post.date }} by
-                  <a target="_blank" href="https://raj-cv.herokuapp.com"">{{ post.author.split(" ")[0] }}</a>
+{% block details %}
+{% if "Found" in heading %}
+  <hr>
+  <b>{{ heading }}</b>
+  <hr>
+{% endif %}
+{% endblock %}
+
+{% block main_content %}
+  {% for post in posts %}
+  <!-- Blog Post -->
+  <div class="card mb-4">
+    <!-- <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap"> -->
+    <div class="card-body">
+      <h2 class="card-title">{{ post.title }}</h2>
+      <p class="card-text">{{ post.subtitle }}</p>
+      <a href="{{ url_for('post', post_id=post.id) }}" class="btn btn-primary">Show Assignment
+        &rarr;</a>
+    </div>
+    <div class="card-footer text-muted">
+      <div class="row">
+        <div class="col-lg-6">
+          Posted on {{ post.date }} by
+          <a target="_blank" href="https://raj-cv.herokuapp.com"">{{ post.author.split(" ")[0] }}</a>
                 </div>
                 {% if current_user.id == 1 %}
-                  <div class="col-lg-6">
-                    <a href="{{ url_for('delete_assignment', post_id=post.id) }}" class="btn btn-danger">
-                      <i class="fa fa-trash" aria-hidden="true"></i></a>
-                  </div>
-                {% endif %}
-              </div>
-            </div>
-          </div>
-        {% endfor %}
-
-        <!-- Pagination -->
-        <ul class="pagination justify-content-center mb-4">
-          <li class="page-item">
-            <a class="page-link" href="#">&larr; Older</a>
-          </li>
-          <li class="page-item disabled">
-            <a class="page-link" href="#">Newer &rarr;</a>
-          </li>
-        </ul>
-
+                  <div class=" col-lg-6">
+            <a href="{{ url_for('delete_assignment', post_id=post.id) }}" class="btn btn-danger">
+              <i class="fa fa-trash" aria-hidden="true"></i></a>
+        </div>
+        {% endif %}
       </div>
-
-      <!-- Sidebar Widgets Column -->
-      
-      <div class="col-md-4">
-        
-
-      {% include "search_bar.html" %}
-      {% include "categories.html" %}
-      {% include "side_bar.html" %}
-
-      </div>
-
     </div>
-    <!-- /.row -->
-
   </div>
-  <!-- /.container -->
-  {% include "footer.html" %}
-
+  {% endfor %}
+{% endblock %}
