UI update - 1. added user profile 2. Change Password (beta) 3. update meta tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,7 @@
             {% endwith %}
         {% endblock %}
 
+        {% block other_register_option %}
         <!-- Registration Options -->
     
         <div class="segment">
@@ -86,7 +87,7 @@
                 </a>
             </button>
         </div>
-
+        {% endblock %}
     </form>
 
     {% block reset_btn %}  
