--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
 
     <!-- Meta -->
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="google451e03a6da594bfa.html">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Student Register Portal, for Developers">
