PUSH Notification - 1. notification feature added (beta)

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,6 +67,8 @@
                             <a style="background-color:#5cb377;" hidden id="installButton" class="btn btn-primary"
                                 href="#">Install as an
                                 App</a>
+                             <button style="background-color:#5cb377;" id='push-btn' class="btn btn-primary"
+                                >Enable Push Notifications</button>
                         </div>
                         <!--//cta-holder-->
                         <br>
